// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> renders link button correctly 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<a
  className="c0"
  href="/"
>
  Dummy Label
</a>
`;

exports[`<Button /> renders outline button correctly 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #009cde;
  background-color: #fff;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #bfe6f7;
  background-color: #fff;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders outline disabled button correctly 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #009cde;
  background-color: #fff;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #bfe6f7;
  background-color: #fff;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard button correctly 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
>
  Dummy Label
</button>
`;

exports[`<Button /> renders standard disabled button correctly 1`] = `
.c0 {
  font-size: 14px;
  font-weight: 600;
  height: 36px;
  width: 100%;
  min-width: 100px;
  text-align: center;
  text-transform: capitalize;
  border-radius: 2px;
  cursor: pointer;
  color: #fff;
  background-color: #009cde;
  border: 1px solid #009cde;
}

.c0:disabled {
  color: #fff;
  background-color: #bfe6f7;
  border: 1px solid #bfe6f7;
  cursor: not-allowed;
}

<button
  className="c0"
  disabled={true}
>
  Dummy Label
</button>
`;
